--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -41,3 +41,18 @@ a:hover {
   top: 0;
   left: 0;
 }
+
+.card {
+  backdrop-filter: blur(6px) saturate(280%);
+  -webkit-backdrop-filter: blur(16px) saturate(280%);
+  background-color: rgba(255, 255, 255, 0.55);
+  border-radius: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.125);
+}
+
+.card-dark {
+  backdrop-filter: blur(2px) saturate(5000%);
+  -webkit-backdrop-filter: blur(2px) saturate(5000%);
+  background-color: rgba(0, 0, 0, 0.9);
+  border: 1px solid rgba(0, 0, 0, 0.125);
+}
