--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -15,15 +15,18 @@ body {
 }
 
 a {
-  color: #9b9b9b;
+  color: #9f9999; 
+  text-shadow: 0 0 .1vmin #fff;
   text-decoration: none;
   transition: color 0.3s ease;
   cursor: pointer;
+  font-weight: 400;
 }
 
 a:active,
 a:hover {
   color: #150507;
+  text-decoration: underline;
 }
 
 .flex-column {
@@ -51,7 +54,7 @@ a:hover {
 .card {
   backdrop-filter: blur(6px) saturate(280%) brightness(1.1);
   -webkit-backdrop-filter: blur(16px) saturate(280%);
-  background-color: rgba(253, 247, 247, 0.55);
+  background-color: rgba(253, 247, 247, 0.6);
   border-radius: 4vmin;
   border: 1px solid rgba(253, 247, 247, 0.125);
 }
@@ -60,6 +63,7 @@ a:hover {
   backdrop-filter: blur(2px) saturate(500%);
   background-color: rgba(21, 5, 7, 0.8);
   border: 1px solid rgba(21, 5, 7, 0.125);
+  text-shadow: 0 0 .1vmin #000;
 }
 
 .fancy {
