--- a/public/styles/content.module.css
+++ b/public/styles/content.module.css
@@ -32,9 +32,11 @@
 }
 
 .content h2 {
-  font-size: calc(1.3rem + 0.4vw);
+  font-size: calc(1rem + 2vmin);
   font-weight: 400;
   line-height: 1.25;
+  margin: 0.5rem 0 2rem;
+  text-align: center;
 }
 
 .content h2::before {
@@ -141,7 +143,7 @@
   max-width: 560px;
 }
 
-@media (min-width: 769px) {
+@media (min-width: 769px) and (min-height: 580px) {
   .content h2,
   .content h3,
   .content h4,
