--- a/public/styles/content.module.css
+++ b/public/styles/content.module.css
@@ -1,5 +1,5 @@
 .content {
-  color: #ddd;
+  color: #feee;
   font-weight: 200;
 }
 
@@ -8,14 +8,15 @@
 }
 
 .content time {
-  color: #9f9797;
+  color: #feec;
   text-shadow: 0 0 0.1vmin #000;
 }
 
 .content p {
-  line-height: 1.5rem;
+  line-height: 1.6rem;
   margin-bottom: 3vmin;
-  color: #f5e5e7bb;
+  color: #feed;
+  font-size: 1.1rem;
 }
 
 .content h1 {
@@ -32,7 +33,7 @@
 }
 
 .content h2 {
-  font-size: calc(1rem + 2vmin);
+  font-size: calc(1rem + 1.8vmin);
   font-weight: 400;
   line-height: 1.25;
   margin: 0.5rem 0 2rem;
@@ -44,7 +45,7 @@
   margin-left: -0.9em;
   font-weight: 300;
   font-size: 1.3rem;
-  color: #9f979788;
+  color: #fee8;
   display: none;
   content: '#';
 }
