--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -7,7 +7,7 @@ body {
     'DejaVu Sans', 'Bitstream Vera Sans', 'Trebuchet MS', Verdana, 'Verdana Ref',
     sans-serif;
   background-color: #0d0707;
-  color: #f5e5e7;
+  color: #feee;
   font-weight: 200;
   height: 100%;
   scroll-behavior: smooth;
@@ -20,8 +20,7 @@ body {
 a {
   font-family: 'Segoe UI', Candara, 'Bitstream Vera Sans', 'DejaVu Sans',
     'Bitstream Vera Sans', 'Trebuchet MS', Verdana, 'Verdana Ref', sans-serif;
-  color: #9f9797;
-  text-shadow: -1px 0 2px #fde5;
+  color: #feec;
   text-decoration: none;
   transition: color 0.3s ease;
   cursor: pointer;
@@ -30,7 +29,7 @@ a {
 
 a:active,
 a:hover {
-  color: #f5e5e7;
+  color: #feee;
   text-decoration: underline;
 }
 
@@ -80,14 +79,14 @@ a:hover {
   transition: color 0.3s ease;
 }
 footer {
-  color: #9f9797;
+  color: #feec;
   text-shadow: 0 0 0.1vmin #000;
 }
 footer svg {
-  stroke: #9f9797;
+  stroke: #feec;
   transition: 200ms;
 }
 footer svg:hover {
-  stroke: #ddd;
+  stroke: #feee;
   transition: 200ms;
 }
