--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -56,8 +56,8 @@ a:hover {
 }
 
 .card {
-  backdrop-filter: blur(6px) saturate(280%) brightness(1.1);
-  -webkit-backdrop-filter: blur(16px) saturate(280%);
+  backdrop-filter: blur(5px) saturate(280%);
+  -webkit-backdrop-filter: blur(5px) saturate(280%);
   background-color: rgba(13, 7, 7, 0.7);
   border-radius: 4vmin;
   border: 3px solid rgba(13, 7, 7, 0.125);
@@ -66,7 +66,7 @@ a:hover {
 .card-dark {
   backdrop-filter: blur(2px) saturate(500%);
   background-color: rgba(11, 4, 6, 0.7);
-  text-shadow: 0 0 0.1vmin #000;
+  text-shadow: 1px 2px 2px #100e;
 }
 
 .fancy {
@@ -80,7 +80,7 @@ a:hover {
 }
 footer {
   color: #feec;
-  text-shadow: 0 0 0.1vmin #000;
+  text-shadow: 1px 2px 2px #100e;
 }
 footer svg {
   stroke: #feec;
