--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap');
 
+html {
+  --dark-shadow: 1px 2px 2px #000e;
+}
+
 html,
 body {
   font-family: 'Ubuntu', 'Segoe UI', Candara, 'Bitstream Vera Sans',
