--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -37,6 +37,14 @@ a:hover {
   text-decoration: underline;
 }
 
+time {
+  font-family: 'Ubuntu', 'Segoe UI', Candara, 'Bitstream Vera Sans',
+    'DejaVu Sans', 'Bitstream Vera Sans', 'Trebuchet MS', Verdana, 'Verdana Ref',
+    sans-serif;
+  color: #feec;
+  letter-spacing: 2px;
+}
+
 .flex-column {
   display: flex;
   flex-direction: column;
