--- a/src/features/components/content/PostLayout.module.css
+++ b/src/features/components/content/PostLayout.module.css
@@ -104,6 +104,166 @@
   }
 }
 
+/* CONTENT */
+.content {
+  color: #feee;
+  font-weight: 200;
+}
+
+.content a {
+  color: rgba(1, 88, 123, 0.8);
+}
+
+.content time {
+  color: #feec;
+  text-shadow: 0 0 0.1vmin #000;
+}
+
+.content p {
+  line-height: 1.6rem;
+  margin-bottom: 3vmin;
+  color: #feed;
+  font-size: 1.1rem;
+}
+
+.content h1 {
+  margin: 2.5rem 0 0 0;
+}
+
+.content h2,
+.content h3,
+.content h4,
+.content h5 {
+  margin-bottom: 1vmin;
+  margin-top: 0;
+  line-height: 1.25em;
+}
+
+.content h2 {
+  font-size: calc(1rem + 1.8vmin);
+  font-weight: 400;
+  line-height: 1.25;
+  margin: 0.5rem 0 2rem;
+  text-align: center;
+}
+
+.content h2::before {
+  position: absolute;
+  margin-left: -0.9em;
+  font-weight: 300;
+  font-size: 1.3rem;
+  color: #fee8;
+  display: none;
+  content: '#';
+}
+
+.content pre {
+  display: block;
+  backdrop-filter: blur(3px) saturate(200%);
+  background-color: rgba(11, 4, 6, 0.85);
+  color: #eaeaea;
+  line-height: 1.25rem;
+  padding: 4vmin;
+  overflow: auto;
+  margin: 1.75rem 0 0 0;
+  white-space: pre-wrap;
+  border-radius: 4vmin;
+  text-shadow: 0 0 0.1vmin #000;
+}
+
+.content pre code {
+  background-color: transparent;
+  font-size: 100%;
+  padding: 0;
+}
+
+.content blockquote {
+  margin: 0 1rem;
+}
+
+.content blockquote::before {
+  position: absolute;
+  content: '\201C';
+  font-size: 6em;
+  font-family: roboto, serif;
+  line-height: 1.5rem;
+  margin-top: 0.1em;
+  margin-left: -0.2em;
+  z-index: -1;
+  color: #ededed;
+}
+
+.content table {
+  max-width: 100%;
+  border-spacing: 0;
+  margin-top: 1.5rem;
+}
+
+.content table thead {
+  background: #f7f7f7;
+}
+
+.content table th {
+  font-weight: 500;
+}
+
+.content table th,
+.content table td {
+  padding: 0.5em 1em;
+  border: 1px double #eee;
+}
+
+.content ol,
+.content ul {
+  padding: 0 0 0 1.5rem;
+  margin: 1.5rem 0 0 0;
+}
+
+.content ol li,
+.content ul li {
+  line-height: 1.5rem;
+}
+
+.content li ol,
+.content li ul {
+  margin: 0;
+}
+
+.content abbr[title] {
+  text-decoration: underline double;
+}
+
+.content kbd {
+  font-family: 'Ubuntu Mono', monospace;
+}
+
+.content img {
+  width: auto;
+  max-height: 500px;
+  display: block;
+  margin: 4vmin auto;
+}
+
+.content iframe {
+  margin: 2vmin auto 0rem;
+  display: flex;
+  width: 100%;
+  max-width: 560px;
+}
+
+@media (min-width: 769px) and (min-height: 460px) {
+  .content h2,
+  .content h3,
+  .content h4,
+  .content h5 {
+    position: relative;
+  }
+
+  .content h2::before {
+    display: block;
+  }
+}
+
 /* Syntax highlighting */
 .hljs-comment,
 .hljs-prolog,
