--- a/src/features/components/layout/Navigation.module.css
+++ b/src/features/components/layout/Navigation.module.css
@@ -1,6 +1,6 @@
 .link {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   text-shadow: 1px 2px 2px #000e;
   transition: 200ms;
   position: absolute;
@@ -76,7 +76,7 @@
   font-size: 2rem;
   padding: 0 1.5rem 0 0;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
   display: flex;
 }
 .bullet::before {
