--- a/src/features/components/layout/Navigation.module.css
+++ b/src/features/components/layout/Navigation.module.css
@@ -21,12 +21,14 @@
   z-index: 1;
   position: absolute;
   font-weight: 500;
+  left: 0;
   top: 7.6rem;
   margin: 0;
   text-align: right;
   background-color: rgba(11, 4, 6, 0.3);
   border-radius: 0 4vmin 4vmin 0;
   padding: 0 20px;
+  transition: 200ms;
 }
 .title_short h1 {
   transition: 200ms;
