--- a/src/features/components/lists/FieldList.module.css
+++ b/src/features/components/lists/FieldList.module.css
@@ -9,11 +9,8 @@
 .h1 {
   margin: 0 0 2rem;
   padding: 0;
-  font-weight: 100;
   font-size: 1.75rem;
-  color: #feec;
-  text-shadow: 1px 2px 2px #100e;
-  text-shadow: 1px 1px 5px #000;
+  text-shadow: var(--dark-shadow);
 }
 .h1 span {
   font-weight: bold;
@@ -35,9 +32,6 @@
   justify-content: space-between;
   width: 100%;
 }
-.posts li {
-  margin-bottom: 1.5rem;
-}
 .reference {
   border-radius: 4vmin;
 }
@@ -49,7 +43,7 @@
 }
 @media (min-width: 769px) and (min-height: 460px) {
   .h1 {
-    font-size: 2rem;
+    font-size: 3rem;
   }
   .categories {
     padding: 1rem;
