--- a/src/features/components/content/Chapter.module.css
+++ b/src/features/components/content/Chapter.module.css
@@ -3,18 +3,19 @@
   flex-direction: column;
   margin-bottom: 7vmin;
 }
-.cat-button {
+.cat_button {
   transition: background-color 0.3s ease;
   padding: 0.25em 0.75em;
   border-radius: 4vmin;
-  color: #feee;
+  color: #211;
   margin-top: 1rem;
   width: fit-content;
   align-self: flex-end;
+  text-shadow: 0px 0px 2px #fee8;
 }
-.cat-button:active,
-.cat-button:hover {
+.cat_button:active,
+.cat_button:hover {
   background-color: #feec;
-  text-shadow: 0 0 0.1vmin #000;
-  color: #000;
+  text-shadow: 0px 0px 2px #000e;
+  color: #fff;
 }
