--- a/src/features/components/lists/ReferenceItem.module.css
+++ b/src/features/components/lists/ReferenceItem.module.css
@@ -61,12 +61,13 @@
   max-width: 27vmin;
 }
 .category_link {
-  color: #feee;
+  color: #211;
+  text-shadow: 0px 0px 2px #fee8;
   transition: background-color 0.3s ease;
   padding: 0.25em 0.5em;
 }
 .category_link:hover {
   background-color: #feec;
-  text-shadow: 0 0 0.1vmin #000;
-  color: #000;
+  text-shadow: 0px 0px 2px #000e;
+  color: #fff;
 }
