--- a/src/features/components/layout/Layout.module.css
+++ b/src/features/components/layout/Layout.module.css
@@ -5,7 +5,8 @@
   height: fit-content;
 }
 .main {
-  position: relative;
+  position: absolute;
+  top: 0;
   z-index: 2;
   display: flex;
   min-height: 100%;
@@ -20,5 +21,6 @@
   }
   .main {
     flex: 1 1 auto;
+    position: relative;
   }
 }
