new gram embed, cleanup, new posts, no hard slug

--- a/src/features/components/content/PostLayout.module.css
+++ b/src/features/components/content/PostLayout.module.css
@@ -223,6 +223,7 @@
 .content ul {
   padding: 0 0 0 1.5rem;
   margin: 1.5rem 0 0 0;
+  list-style-type: disc;
 }
 
 .content ol li,
@@ -254,7 +255,7 @@
   margin: 2vmin auto 0rem;
   display: flex;
   width: 100%;
-  max-width: 560px;
+  max-width: 1000px;
 }
 
 @media (min-width: 769px) and (min-height: 460px) {
